# 3D-Reconstruction

./: CMakeLists.txt  Instructions.md  QtCreatorPackageManager.cmake  README.md  vcpkg.json
.github/workflows/: Build-App-ci.yml  Build-Release-Ver-ci.yml  build.yml  ci.yml  python-ci.yml  release.yml
.prompts/: bugfix.md  feature.md  refactor.md
.review/: checklist.md
.tasks/: README.md  task-template.md
AITraining/: StartChatbotServer.py  TrainModel.py  requirements.txt
Config/: config.ini
Doxygen/: README.md
custom-ports/libaec/: portfile.cmake  vcpkg.json
scripts/: agent_pipeline.ps1  agent_pipeline.sh
src/: pch.h  pch_dummy.cpp
src/app/: AppConstants.h  AppShell.cpp  AppShell.h  CMakeLists.txt  Main.cpp  MainWindow.cpp  resources.qrc
src/core/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  IAIAssistantService.h  IViewerService.h  LanguageManager.cpp  LanguageManager.h  ServiceRegistry.h  SignalBus.h  UserManager.cpp  UserManager.h
src/modules/AIAssistantPlugin/: AIAssistantPlugin.cpp  AIAssistantPlugin.h  CMakeLists.txt  ChatBotDockWidget.cpp  ChatMessageRenderer.cpp  ChatMessageRenderer.h  ChatTemplates.h
src/modules/AIProcessorPlugin/: AIProcessorPlugin.cpp  CMakeLists.txt
src/modules/ReconstructionPlugin/: CMakeLists.txt  ReconstructionPlugin.cpp  ReconstructionPlugin.h
src/modules/SendMailPlugin/: CMakeLists.txt  MailDockWidget.cpp
src/modules/UserAuthPlugin/: CMakeLists.txt  ThemeSelectionDialog.cpp  UserAuthPlugin.cpp
src/modules/ViewerPlugin/: CMakeLists.txt  ViewerListUI.cpp  ViewerListUI.h  ViewerNavigatorUI.cpp  ViewerNavigatorUI.h  ViewerPlugin.cpp  ViewerPlugin.h  ViewerViewModel.cpp  ViewerViewModel.h
src/services/: CMakeLists.txt
src/services/ai/: AIAssistant.cpp  AIAssistant.h  AIProcessor.cpp  AIProcessor.h  AIService.cpp  AIService.h
src/services/mail/: MailService.cpp  MailService.h
src/services/reconstruction/: ReconstructionService.cpp  ReconstructionService.h
src/services/scene/: SceneService.cpp
src/services/viewer/: DicomLoader.cpp  ViewerService.cpp  ViewerService.h
src/utils/: CMakeLists.txt  Logger.cpp
tests/: CMakeLists.txt  TestAppConfig.cpp  TestLanguageManager.cpp  TestPointCloudFilter.cpp  TestReconstructionPipeline.cpp
translations/: translations_en.json  translations_vi.json
